--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,11 +2,13 @@
 requires = ["flit_core >=2,<4"]
 build-backend = "flit_core.buildapi"
 
-[tool.flit.metadata]
-module = "pygam2"
-author = "MikeHLee"
-author-email = "leemichael289@gmail.com"
-home-page = "https://github.com/MikeHLee/pyGAM2"
+[project]
+name = "pygam2"
+description = "Generalized Additive Models in Python, with modern python support (<= 3.11)"
+
+version = "0.9.1"
+authors = [{name = "MikeHLee", email= "leemichael289@gmail.com"}]
+
 classifiers = [
     "License :: OSI Approved :: Apache Software License",
     "Topic :: Scientific/Engineering",
@@ -17,10 +19,6 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
 ]
-requires = [
-    "numpy<1.24.0",
-    "progressbar2",
-    "scipy",
-]
+
 requires-python = ">=3.8"
-keywords = "machine-learning data-science scientific-computing"
+keywords = ["machine-learning", "data-science", "scientific-computing"]
